--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-router": "^6.25.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "tailwindcss": "^3.4.7",
     "web-vitals": "^2.1.4"
   },
